Fixed: overflow ellipsis for h3 title on main pages

--- a/styles/desk/styles.scss
+++ b/styles/desk/styles.scss
@@ -344,14 +344,25 @@ input[type='radio'] {
     margin-bottom: 5.4rem;
 
     h3 {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       width: 100%;
       margin-bottom: 1.6rem;
+      white-space: nowrap;
+
+      span {
+        font-family: inherit;
+        font-size: inherit;
+        font-weight: inherit;
+        line-height: inherit;
+
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
 
       a {
-        position: absolute;
         right: -2.4rem;
-        top: 50%;
-        transform: translateY(-50%);
         font-family: 'Poppins', sans-serif;
         font-weight: 700;
         font-size: 1.4rem;
